Fix the text and align the calculator

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   min-height: 100%;
+  justify-content: center;
 }
 
 body {
@@ -18,11 +19,12 @@ body {
 
 .calculator_container {
   width: 200%;
+  justify-content: center;
 }
 
 .calculator_screen {
   padding: 15px;
-  font-size: 4.5em;
+  font-size: 3.75em;
   text-align: right;
   background-color: #808080;
   color: #fff;
